[gd_scene load_steps=4 format=2]

[ext_resource path="res://TileSet.tres" type="TileSet" id=1]
[ext_resource path="res://Levels/Level.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 9.61678, 35.9584 )

[node name="Exit" type="Area2D" parent="."]
position = Vector2( 149.269, 53.9375 )
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
shape = SubResource( 1 )

[node name="Doors" type="Node2D" parent="."]

[node name="Keys" type="Node2D" parent="."]

[node name="Vials" type="Node2D" parent="."]

[node name="BloodParticles" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Projectiles" type="Node2D" parent="."]
[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
